--- a/pilltest/index.html
+++ b/pilltest/index.html
@@ -1,254 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<title>Asset icon pills via issuer TOML (robust, CORS-safe)</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<script src="https://cdn.jsdelivr.net/npm/@stellar/stellar-sdk@14.3.0/dist/stellar-sdk.min.js" crossorigin="anonymous"></script>
-<script type="module">
-  import * as TOML from "https://esm.sh/toml@3.0.0";
-  window.__TOML_PARSE__ = TOML.parse;
-</script>
-<style>
-  :root{--bg:#0b0f12;--panel:#12181d;--ink:#e8f0f6;--muted:#8aa0ac;--border:#1c242c;--pill:#0f1620}
-  *{box-sizing:border-box}
-  html,body{margin:0;background:var(--bg);color:var(--ink);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
-  .wrap{max-width:760px;margin:28px auto;padding:0 16px}
-  .card{background:var(--panel);border:1px solid var(--border);border-radius:16px;padding:18px}
-  h1{margin:0 0 12px;font-size:18px}
-  label{display:block;margin:10px 0 6px;color:var(--muted);font-size:12px}
-  select{width:100%;padding:12px;border-radius:10px;border:1px solid #1e2831;background:#0e1419;color:#fff}
-  .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
-  .pill{display:inline-flex;align-items:center;gap:10px;padding:10px 12px;border-radius:999px;background:var(--pill);border:1px solid #1e2831}
-  .ico{width:22px;height:22px;border-radius:999px;overflow:hidden;flex:0 0 22px;background:#101822;display:grid;place-items:center}
-  .ico img{width:100%;height:100%;display:block}
-  .t{font-weight:700;letter-spacing:.2px}
-  .box{background:#0d141b;border:1px solid #1b2531;border-radius:12px;padding:12px;margin-top:12px}
-  .muted{color:var(--muted)}
-  .tip{margin-top:8px;font-size:12px;color:var(--muted)}
-  .btn{cursor:pointer;font-weight:700;border-radius:10px;border:1px solid #28414d;background:#0c1c20;color:#d9f6ff;padding:10px 14px}
-  .btn:hover{filter:brightness(1.06)}
-  .grid{display:grid;grid-template-columns:1fr;gap:10px}
-  @media(min-width:640px){.grid{grid-template-columns:1fr 1fr}}
-  code{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:12px}
-</style>
+  <meta charset="utf-8" />
+  <title>Stellar Asset Icon Test (TOML → image=)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    :root{ --bg:#0b0f12; --panel:#12181d; --ink:#e8f0f6; --muted:#9bb0be; --ok:#57d29a; --err:#ff6b6b; --border:#1b2630; }
+    *{ box-sizing:border-box }
+    html,body{ margin:0; background:var(--bg); color:var(--ink); font-family: ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
+    .wrap{ max-width:760px; margin:24px auto; padding:0 16px }
+    .card{ background:var(--panel); border:1px solid var(--border); border-radius:14px; padding:18px }
+    h1{ margin:0 0 12px; font-size:18px; letter-spacing:.2px }
+    label{ display:block; margin:8px 0 6px; font-size:12px; color:var(--muted) }
+    input{ width:100%; padding:12px; border-radius:10px; border:1px solid #1e2831; background:#0e1419; color:#eaf6ff }
+    .row{ display:flex; gap:10px; flex-wrap:wrap }
+    .col{ flex:1; min-width:210px }
+    button{ cursor:pointer; font-weight:600; border-radius:10px; border:1px solid #224a54; background:#0c1c20; color:#d9f6ff; padding:10px 14px }
+    button:hover{ filter:brightness(1.08) }
+    .pill{ display:inline-flex; align-items:center; gap:10px; padding:8px 12px; border-radius:999px; background:#0f1821; border:1px solid #1f2b36; font-weight:600 }
+    .pill img{ width:20px; height:20px; border-radius:999px; object-fit:cover; display:block; background:#0a0f14 }
+    .muted{ color:var(--muted); font-size:12px }
+    .log{ margin-top:12px; padding:10px; border-radius:10px; background:#0b1115; border:1px dashed #20303a; font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:12px; white-space:pre-wrap }
+    .flex-center{ display:flex; align-items:center; gap:12px; flex-wrap:wrap }
+    .badge{ padding:4px 8px; border-radius:999px; font-size:12px; border:1px solid #22303b; background:#0e151c }
+    .ok{ color:var(--ok); border-color:#244b39 }
+    .err{ color:var(--err); border-color:#4b2a2a }
+    /* toast */
+    .toast{ position:fixed; left:50%; transform:translateX(-50%); bottom:16px; background:#0e1823; border:1px solid #21464f; color:#eaf6ff; padding:10px 14px; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.35); display:none; max-width:92vw }
+    .toast.show{ display:block }
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="card">
-    <h1>Issuer logos from <code>.well-known/stellar.toml</code> (browser-safe)</h1>
+  <div class="wrap">
+    <div class="card">
+      <h1>Asset Icon via TOML <span class="badge">Horizon ➜ TOML ➜ image=</span></h1>
 
-    <div class="grid">
-      <div>
-        <label>From (Code:Issuer or XLM)</label>
-        <select id="assetSel">
-          <option value="XLM">XLM (native)</option>
-          <option value="AQUA:GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA">AQUA</option>
-          <option value="AQUAm25:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC">AQUAm25</option>
-          <option value="USDC:GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN">USDC</option>
-        </select>
-      </div>
-      <div>
-        <label>Preview</label>
-        <div class="pill">
-          <span class="ico" id="icon"></span>
-          <span class="t" id="ticker">XLM</span>
+      <div class="row">
+        <div class="col">
+          <label>Asset Code</label>
+          <input id="code" placeholder="e.g. USDC" value="USDC" />
+        </div>
+        <div class="col">
+          <label>Asset Issuer (G…)</label>
+          <input id="issuer" placeholder="G..." value="GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN" />
         </div>
       </div>
-    </div>
 
-    <div class="box">
-      <div id="debug" class="muted" style="line-height:1.4"></div>
-      <div class="tip">If SDK fails due to CORS, we fall back to several TOML mirrors via <code>r.jina.ai</code> and parse client-side.</div>
-    </div>
+      <div class="row" style="margin-top:10px">
+        <button id="load">Load Icon</button>
+        <button id="tryAqua" class="muted" style="border-color:#2a3340">Try AQUA</button>
+      </div>
 
-    <div class="row" style="margin-top:12px">
-      <button class="btn" id="clear">Clear caches</button>
+      <div id="result" style="margin-top:14px; display:none" class="flex-center">
+        <span class="pill" id="pill"><img id="icon" alt="" /><span id="ticker">—</span></span>
+        <span id="status" class="badge"></span>
+      </div>
+
+      <div id="notes" class="muted" style="margin-top:10px"></div>
+
+      <div id="log" class="log" aria-live="polite"></div>
     </div>
   </div>
-</div>
 
-<script>
-(async function(){
-  const SDK = window.StellarSdk;
-  const TOML = window.__TOML_PARSE__;
-  const HORIZON = "https://horizon.stellar.org";
+  <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
-  // Known overrides to avoid wrong/empty home_domain
-  const ISSUER_DOMAIN_OVERRIDES = new Map([
-    // AQUA
-    ["GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA", "aqua.network"],
-    // AQUAm25
-    ["GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC", "mirrasets.com"],
-    // USDC (Centre)
-    ["GA5ZSEJYB37JRC5AVCIA5MOP4RHTM335X2KGX3IHOJAPP5RE34K4KZVN", "centre.io"],
-  ]);
+  <script>
+    const HORIZON = "https://horizon.stellar.org";
 
-  const ICON_CACHE   = new Map();   // key: "CODE:ISSUER" -> url
-  const DOMAIN_CACHE = new Map();   // issuer -> domain
-  const TOML_CACHE   = new Map();   // domain -> { obj, via }
+    const $ = (id) => document.getElementById(id);
+    const toastEl = $("toast");
+    function toast(msg){ toastEl.textContent = msg; toastEl.classList.add("show"); setTimeout(()=>toastEl.classList.remove("show"), 2400); }
 
-  const debugEl = document.getElementById("debug");
-  const iconEl  = document.getElementById("icon");
-  const tickEl  = document.getElementById("ticker");
-  const sel     = document.getElementById("assetSel");
+    function pretty(obj){ try{return JSON.stringify(obj,null,2)}catch{return String(obj)} }
 
-  function log(msg){
-    debugEl.innerHTML = msg.replace(/\n/g,'<br/>');
-  }
-
-  // Nice monogram fallback
-  function monogram(text) {
-    const c = document.createElement('canvas'); c.width=64; c.height=64;
-    const x = c.getContext('2d');
-    x.fillStyle='#16212b'; x.beginPath(); x.arc(32,32,32,0,Math.PI*2); x.fill();
-    x.fillStyle='#d8e6f2'; x.font='bold 26px ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial';
-    x.textAlign='center'; x.textBaseline='middle';
-    x.fillText((text||'?').slice(0,3).toUpperCase(),32,36);
-    return c.toDataURL('image/png');
-  }
-
-  // SVG XLM
-  const XLM_SVG = 'data:image/svg+xml;utf8,' + encodeURIComponent(`
-    <svg viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="128" cy="128" r="128" fill="#1b2a42"/>
-      <path fill="#fff" d="M186.7 86.2c-28.7-28.8-75.2-28.9-104-.2-12.6 12.5-20 28.2-21.6 45l26.2-11
-      c2.9-9.5 8.2-18.5 15.8-26 21.9-21.7 57.4-21.6 79.2.2 21.8 21.8 22 57.3.3 79.2-18.4 18.6-47.1 21.2-68.5 7.9l-12.4 20.9
-      c30.1 16.7 68.7 12 93.7-13.2 28.9-29 28.8-75.8-1.1-103.8zM61 139.6l-18.5 7.8c-2.7 1.2-3.9 4.3-2.7 7l4.1 9.6c1.2 2.7 4.3 3.9 7 2.7l18.5-7.8 7.9 18.5c1.2 2.7 4.3 3.9 7 2.7l9.6-4.1c2.7-1.2 3.9-4.3 2.7-7l-7.9-18.5 72.7-30.8c2.7-1.2 3.9-4.3 2.7-7l-4.1-9.6c-1.2-2.7-4.3-3.9-7-2.7L84 138.6l-7.9-18.5c-1.2-2.7-4.3-3.9-7-2.7l-9.6 4.1c-2.7 1.2-3.9 4.3-2.7 7L61 139.6z"/>
-    </svg>
-  `);
-
-  function parseSelection(val){
-    if(val === "XLM") return { code:"XLM", issuer:null };
-    const [code, issuer] = val.split(":");
-    return { code, issuer };
-  }
-
-  async function getIssuerDomain(issuer){
-    if(!issuer) return null; // native
-    if(DOMAIN_CACHE.has(issuer)) return DOMAIN_CACHE.get(issuer);
-    // override first
-    if(ISSUER_DOMAIN_OVERRIDES.has(issuer)){
-      const d = ISSUER_DOMAIN_OVERRIDES.get(issuer);
-      DOMAIN_CACHE.set(issuer, d);
-      return d;
+    // Fetch Horizon asset to get TOML link
+    async function fetchTomlLink(code, issuer){
+      const url = `${HORIZON}/assets?asset_code=${encodeURIComponent(code)}&asset_issuer=${encodeURIComponent(issuer)}`;
+      const res = await fetch(url);
+      if(!res.ok) throw new Error(`Horizon assets ${res.status}`);
+      const j = await res.json();
+      const rec = j?._embedded?.records?.[0];
+      const toml = rec?._links?.toml?.href || "";
+      if(!toml) throw new Error("No TOML link on Horizon record");
+      return { toml, record:rec };
     }
-    // horizon home_domain
-    try{
-      const r = await fetch(`${HORIZON}/accounts/${issuer}`);
-      if(!r.ok) throw new Error(`Horizon ${r.status}`);
-      const j = await r.json();
-      const d = (j.home_domain || "").trim() || null;
-      if(d) DOMAIN_CACHE.set(issuer, d);
-      return d;
-    }catch(_){
-      return null;
-    }
-  }
 
-  async function resolveToml(domain){
-    if(!domain) return { toml:null, via:'no-domain' };
-    if(TOML_CACHE.has(domain)) return TOML_CACHE.get(domain);
-    // 1) SDK (CORS ok issuers)
-    try{
-      const t = await SDK.StellarTomlResolver.resolve(domain, { allowHttp:false, timeout:8000 });
-      if(t){ const out={ toml:t, via:'sdk' }; TOML_CACHE.set(domain,out); return out; }
-    }catch(_){}
-    // 2) Proxy mirrors via r.jina.ai
-    const tries = [
-      `https://r.jina.ai/https://${domain}/.well-known/stellar.toml`,
-      `https://r.jina.ai/http://${domain}/.well-known/stellar.toml`,
-      `https://r.jina.ai/https://www.${domain}/.well-known/stellar.toml`,
-      `https://r.jina.ai/http://www.${domain}/.well-known/stellar.toml`,
-    ];
-    for(const u of tries){
+    // Fetch TOML with graceful CORS fallback
+    async function fetchTomlText(tomlUrl){
       try{
-        const r = await fetch(u, { mode:'cors' });
-        if(!r.ok) continue;
-        const txt = await r.text();
-        if(!txt || txt.length < 16) continue;
+        const r = await fetch(tomlUrl, { mode:"cors" });
+        if(!r.ok) throw new Error(`TOML ${r.status}`);
+        return await r.text();
+      }catch(e){
+        // Fallback via r.jina.ai cache proxy (GET-only mirror)
         try{
-          const parsed = TOML(txt);
-          const out = { toml: parsed, via: 'proxy' };
-          TOML_CACHE.set(domain, out);
-          return out;
-        }catch(_){ /* parse fail - try next */ }
-      }catch(_){}
+          const mirror = "https://r.jina.ai/http/" + tomlUrl.replace(/^https?:\/\//i,"");
+          const r2 = await fetch(mirror, { mode:"cors" });
+          if(!r2.ok) throw new Error(`Mirror ${r2.status}`);
+          return await r2.text();
+        }catch(e2){
+          throw new Error(`TOML fetch failed (${e.message}); mirror failed (${e2.message})`);
+        }
+      }
     }
-    const out = { toml:null, via:'proxy-fail' };
-    TOML_CACHE.set(domain, out);
-    return out;
-  }
 
-  function absolutize(domain, url){
-    if(!url) return null;
-    if(/^https?:\/\//i.test(url)) return url;
-    if(url.startsWith("//")) return `https:${url}`;
-    if(url.startsWith("/")) return `https://${domain}${url}`;
-    return `https://${domain}/${url}`;
-  }
+    // Super-light TOML currency parser:
+    // Splits on [[CURRENCIES]], pulls key=value lines, strips quotes
+    function parseCurrenciesFromToml(tomlText){
+      const blocks = tomlText.split(/\n\s*\[\[CURRENCIES\]\]\s*\n/gi);
+      const out = [];
+      for (const blk of blocks){
+        // Skip header before first [[CURRENCIES]]
+        if(!/^\s*code\s*=|^\s*issuer\s*=/mi.test(blk)) continue;
+        const entry = {};
+        // Capture lines like: key = "value"
+        const re = /^\s*([A-Za-z0-9_\-]+)\s*=\s*("?)(.*?)\2\s*$/gm;
+        let m;
+        while((m = re.exec(blk)) !== null){
+          const k = m[1].toLowerCase();
+          const v = m[3];
+          entry[k] = v;
+        }
+        if (entry.code || entry.issuer || entry.image) out.push(entry);
+      }
+      return out;
+    }
 
-  function imageFromCurrencies(toml, code, issuer, domain){
-    if(!toml || !Array.isArray(toml.CURRENCIES)) return null;
-    const hit = toml.CURRENCIES.find(c=>{
-      const ccode = c.code || c.CODE;
-      const ciss  = (c.issuer || c.ISSUER || "").toUpperCase();
-      return ccode === code && ciss === (issuer || "").toUpperCase();
+    function findImageFor(code, issuer, currencies){
+      const codeUpper = String(code).toUpperCase();
+      // First, exact match on issuer + code
+      let hit = currencies.find(c => (c.code||"").toUpperCase()===codeUpper && (c.issuer||"").toUpperCase()===issuer.toUpperCase());
+      // Then, match on code if unique
+      if(!hit){
+        const sameCode = currencies.filter(c => (c.code||"").toUpperCase()===codeUpper);
+        if (sameCode.length === 1) hit = sameCode[0];
+      }
+      return hit?.image || null;
+    }
+
+    async function loadIcon(){
+      const code = $("code").value.trim();
+      const issuer = $("issuer").value.trim();
+      $("result").style.display = "none";
+      $("log").textContent = "";
+      $("notes").textContent = "";
+
+      if(!code || !issuer){ toast("Enter code and issuer."); return; }
+
+      try{
+        $("status").className = "badge";
+        $("status").textContent = "Looking up on Horizon…";
+        const { toml, record } = await fetchTomlLink(code, issuer);
+
+        const domain = record?.home_domain || new URL(toml).hostname || "(unknown)";
+        $("notes").innerHTML = `Issuer: <span class="badge">${issuer}</span> · Domain: <span class="badge">${domain}</span><br/>TOML: <a href="${toml}" target="_blank" rel="noreferrer">${toml}</a>`;
+        $("log").textContent = `Horizon record:\n${pretty(record)}\n\nTOML URL: ${toml}`;
+
+        $("status").textContent = "Fetching TOML…";
+        const text = await fetchTomlText(toml);
+        $("log").textContent += `\n\nTOML (first 400 chars):\n${text.slice(0,400)}…`;
+
+        const currencies = parseCurrenciesFromToml(text);
+        $("log").textContent += `\n\nParsed currencies found: ${currencies.length}`;
+
+        const img = findImageFor(code, issuer, currencies) ||
+                    // light fallback: try top-level "IMAGE" key
+                    (text.match(/^\s*image\s*=\s*"?([^\n"]+)"?/mi)?.[1] || null);
+
+        if (!img){
+          $("status").textContent = "No image field for this asset";
+          $("status").classList.add("err");
+          toast("No image= in TOML for this asset.");
+          return;
+        }
+
+        // Render pill
+        $("ticker").textContent = code.toUpperCase();
+        $("icon").src = img;
+        $("icon").alt = code.toUpperCase() + " logo";
+        $("result").style.display = "flex";
+        $("status").textContent = "Icon loaded ✓";
+        $("status").classList.add("ok");
+      }catch(e){
+        $("status").textContent = "Failed";
+        $("status").classList.add("err");
+        $("log").textContent += `\n\nERROR: ${e.message||e}`;
+        toast(e.message || "Failed to load icon");
+      }
+    }
+
+    $("load").addEventListener("click", loadIcon);
+
+    // Quick AQUA test button
+    $("tryAqua").addEventListener("click", ()=>{
+      $("code").value = "AQUA";
+      $("issuer").value = "GBNZILSTVQZ4R7IKQDGHYGY2QXL5QOFJYQMXPKWRRM5PAV7Y4M67AQUA";
+      loadIcon();
     });
-    const raw = hit?.image || hit?.logo || hit?.IMAGE || hit?.LOGO || null;
-    return absolutize(domain, raw);
-  }
 
-  // Optional last-ditch local overrides (kept tiny)
-  const ICON_OVERRIDES = new Map([
-    // ["AQUA:GBNZIL...", "https://aqua.network/some/icon.svg"], // only if you want a hard override
-  ]);
-
-  async function resolveIcon(code, issuer){
-    const key = `${code}:${issuer||''}`;
-    if(ICON_CACHE.has(key)) return ICON_CACHE.get(key);
-    if(code==="XLM" && !issuer){ ICON_CACHE.set(key, XLM_SVG); return XLM_SVG; }
-
-    // tiny hard override first
-    if(ICON_OVERRIDES.has(key)){
-      const u = ICON_OVERRIDES.get(key);
-      ICON_CACHE.set(key, u); return u;
-    }
-
-    const domain = await getIssuerDomain(issuer);
-    const { toml, via } = await resolveToml(domain);
-
-    log(`Issuer: <code>${issuer||'native'}</code><br/>Domain: <b>${domain||'—'}</b><br/>TOML: <b>${toml?'OK':'unavailable'}</b> (${via})`);
-
-    const url = imageFromCurrencies(toml, code, issuer, domain);
-    if(url){ ICON_CACHE.set(key, url); return url; }
-
-    const mg = monogram(code);
-    ICON_CACHE.set(key, mg);
-    return mg;
-  }
-
-  async function paint(){
-    const v = sel.value;
-    const { code, issuer } = parseSelection(v);
-    tickEl.textContent = code;
-    iconEl.innerHTML = "";
-    const url = await resolveIcon(code, issuer);
-    const img = document.createElement("img");
-    img.alt = `${code} logo`; img.decoding="async"; img.referrerPolicy="no-referrer";
-    img.src = url;
-    iconEl.appendChild(img);
-  }
-
-  sel.addEventListener("change", paint);
-  document.getElementById("clear").addEventListener("click", ()=>{
-    ICON_CACHE.clear(); DOMAIN_CACHE.clear(); TOML_CACHE.clear();
-    log("Caches cleared.");
-    paint();
-  });
-
-  paint();
-})();
-</script>
+    // Enter to submit
+    $("issuer").addEventListener("keydown", (e)=>{ if(e.key==="Enter") loadIcon(); });
+    $("code").addEventListener("keydown", (e)=>{ if(e.key==="Enter") loadIcon(); });
+  </script>
 </body>
 </html>
